--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "currency-converter",
+  "homepage": "https://rizametovd.github.io/currency-converter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,11 +14,13 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "gh-pages": "^3.2.3",
     "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.2",
     "react-scripts": "5.0.0",
+    "save-dev": "^0.0.1-security",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -25,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
