--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "currency-converter",
-  "homepage": "https://rizametovd.github.io/currency-converter/",
+  "homepage": "https://rizametovd.github.io/currency-converter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -r https://github.com/rizametovd/currency-converter.git"
   },
   "eslintConfig": {
     "extends": [
